--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,7 @@
     <meta charset="utf-8">
     <title>Robotak - Contact Us</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Free HTML Templates" name="keywords">
-    <meta content="Free HTML Templates" name="description">
+
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
@@ -31,22 +30,22 @@
 
 <body>
     <!-- Navbar Start -->
-    <div class="container-fluid bg-light position-relative shadow">
-        <nav class="navbar navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-0 px-lg-5">
-            <a href="" class="navbar-brand font-weight-bold text-secondary" style="font-size: 50px;">
-                <img src="img\001-letter-r.png" style="height: 80px; ">
-                <span class="text-primary">Robotak</span>
+    <div class="container-fluid position-relative ">
+        <nav class="navbar navbar-expand-lg navbar-light py-3 py-lg-0 px-0 px-lg-5">
+            <a href="index.html" class="navbar-brand font-weight-bold text-secondary" style="font-size: 50px;">
+                <!-- <img src="img\001-letter-r.png" style="height: 80px; "> -->
+                <span class="text-primary">روبوتاك</span>
             </a>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+            <span class="navbar-toggler-icon"></span>
+        </button>
             <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                 <div class="navbar-nav font-weight-bold mx-auto py-0">
-                    <a href="index.html" class="nav-item nav-link">Home</a>
-                    <a href="about.html" class="nav-item nav-link active">About</a>
-                    <a href="class.html" class="nav-item nav-link">Programs</a>
-                    <a href="team.html" class="nav-item nav-link">Team</a>
-                    <a href="gallery.html" class="nav-item nav-link">Gallery</a>
+                    <a href="about.html" class="nav-item nav-link">حول</a>
+                    <a href="class.html" class="nav-item nav-link active">الكورسات</a>
+                    <a href="gallery.html" class="nav-item nav-link">المعرض</a>
+                    <a href="team.html" class="nav-item nav-link">الفريق</a>
+                    <a href="contact.html" class="nav-item nav-link">تواصل معنا</a>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Blog</a>
                         <div class="dropdown-menu rounded-0 m-0">
@@ -54,9 +53,9 @@
                             <a href="single.html" class="dropdown-item">Blog-Detail</a>
                         </div>
                     </div>
-                    <a href="contact.html" class="nav-item nav-link">Contact</a>
                 </div>
-                <a href="" class="btn btn-primary px-4">Join program</a>
+                <a href="Exam1.html" class="btn btn-primary px-4">امتحن الان</a>
+
             </div>
         </nav>
     </div>
@@ -154,71 +153,57 @@
         <div class="row pt-5">
             <div class="col-lg-3 col-md-6 mb-5">
                 <a href="" class="navbar-brand font-weight-bold text-primary m-0 mb-4 p-0" style="font-size: 40px; line-height: 40px;">
-                    <img src="img\001-letter-r.png" style="height: 80px; ">
-                    <span class="text-white">Robotak</span>
+                    <span class="text-white">روبوتاك</span>
                 </a>
-                <p>Labore dolor amet ipsum ea, erat sit ipsum duo eos. Volup amet ea dolor et magna dolor, elitr rebum duo est sed diam elitr. Stet elitr stet diam duo eos rebum ipsum diam ipsum elitr.</p>
+                <p>فرصة للطلائع لإظهار قدراتهم وابتكاراتهم عن طريق برامج تدريبية (عملية ونظرية) في مجالات تصميم الروبوتات وحل المشاكل والبرمجة السهلة</p>
                 <div class="d-flex justify-content-start mt-4">
-                    <a class="btn btn-outline-primary rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-twitter"></i></a>
-                    <a class="btn btn-outline-primary rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-outline-primary rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-linkedin-in"></i></a>
-                    <a class="btn btn-outline-primary rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-instagram"></i></a>
+                    <a class="btn btn-outline-primary rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="https://www.facebook.com/Robotakemys"><i class="fab fa-facebook-f"></i></a>
+                    <a class="btn btn-outline-primary rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="https://www.instagram.com/Robotakemys"><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
-                <h3 class="text-primary mb-4">Get In Touch</h3>
-                <div class="d-flex">
-                    <h4 class="fa fa-map-marker-alt text-primary"></h4>
-                    <div class="pl-3">
-                        <h5 class="text-white">Address</h5>
-                        <p>123 Street</p>
-                    </div>
-                </div>
+                <h3 class="text-primary mb-4">ابقى على تواصل</h3>
                 <div class="d-flex">
                     <h4 class="fa fa-envelope text-primary"></h4>
                     <div class="pl-3">
-                        <h5 class="text-white">Email</h5>
-                        <p>info@example.com</p>
+                        <h5 class="text-white">البريد</h5>
+                        <p>webmaster@robotak.org</p>
                     </div>
                 </div>
                 <div class="d-flex">
                     <h4 class="fa fa-phone-alt text-primary"></h4>
                     <div class="pl-3">
-                        <h5 class="text-white">Phone</h5>
-                        <p>+020 115-392-1187</p>
+                        <h5 class="text-white">تليفون</h5>
+                        <p>19133</p>
                     </div>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
-                <h3 class="text-primary mb-4">Quick Links</h3>
+                <h3 class="text-primary mb-4">روابط سريعة</h3>
                 <div class="d-flex flex-column justify-content-start">
-                    <a class="text-white mb-2" href="index.html"><i class="fa fa-angle-right mr-2"></i>Home</a>
-                    <a class="text-white mb-2" href="about.html"><i class="fa fa-angle-right mr-2"></i>About Us</a>
-                    <a class="text-white mb-2" href="class.html"><i class="fa fa-angle-right mr-2"></i>Our Classes</a>
-                    <a class="text-white mb-2" href="team.html"><i class="fa fa-angle-right mr-2"></i>Our Doctors</a>
-                    <a class="text-white mb-2" href="blog.html"><i class="fa fa-angle-right mr-2"></i>Our Blog</a>
-                    <a class="text-white" href="contact.html"><i class="fa fa-angle-right mr-2"></i>Contact Us</a>
+                    <a class="text-white mb-2" href="index.html"><i class="fa fa-angle-right mr-2"></i>الرئيسيه</a>
+                    <a class="text-white mb-2" href="about.html"><i class="fa fa-angle-right mr-2"></i>حول</a>
+                    <a class="text-white mb-2" href="team.html"><i class="fa fa-angle-right mr-2"></i>فريق العمل</a>
+                    <a class="text-white" href="contact.html"><i class="fa fa-angle-right mr-2"></i>تواصل معنا</a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
-                <h3 class="text-primary mb-4">Newsletter</h3>
+                <h3 class="text-primary mb-4">الاشعارات</h3>
                 <form action="">
                     <div class="form-group">
-                        <input type="text" class="form-control border-0 py-4" placeholder="Your Name" required="required" />
+                        <input type="text" class="form-control border-0 py-4" placeholder="الاسم" required="required" />
                     </div>
                     <div class="form-group">
-                        <input type="email" class="form-control border-0 py-4" placeholder="Your Email" required="required" />
+                        <input type="email" class="form-control border-0 py-4" placeholder="البريد الالكتروني" required="required" />
                     </div>
                     <div>
-                        <button class="btn btn-primary btn-block border-0 py-3" type="submit">Submit Now</button>
+                        <button class="btn btn-primary btn-block border-0 py-3" type="submit">اشترك</button>
                     </div>
                 </form>
             </div>
         </div>
-
     </div>
     <!-- Footer End -->
-
 
     <!-- Back to Top -->
     <a href="#" class="btn btn-primary p-3 back-to-top"><i class="fa fa-angle-double-up"></i></a>
