--- a/single.html
+++ b/single.html
@@ -5,8 +5,6 @@
     <meta charset="utf-8">
     <title>Robotak - News Detail</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Free HTML Templates" name="keywords">
-    <meta content="Free HTML Templates" name="description">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
@@ -31,22 +29,22 @@
 
 <body>
     <!-- Navbar Start -->
-    <div class="container-fluid bg-light position-relative shadow">
-        <nav class="navbar navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-0 px-lg-5">
-            <a href="" class="navbar-brand font-weight-bold text-secondary" style="font-size: 50px;">
-                <img src="img\001-letter-r.png" style="height: 80px; ">
-                <span class="text-primary">Robotak</span>
+    <div class="container-fluid position-relative ">
+        <nav class="navbar navbar-expand-lg navbar-light py-3 py-lg-0 px-0 px-lg-5">
+            <a href="index.html" class="navbar-brand font-weight-bold text-secondary" style="font-size: 50px;">
+                <!-- <img src="img\001-letter-r.png" style="height: 80px; "> -->
+                <span class="text-primary">روبوتاك</span>
             </a>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+            <span class="navbar-toggler-icon"></span>
+        </button>
             <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                 <div class="navbar-nav font-weight-bold mx-auto py-0">
-                    <a href="index.html" class="nav-item nav-link">Home</a>
-                    <a href="about.html" class="nav-item nav-link active">About</a>
-                    <a href="class.html" class="nav-item nav-link">Programs</a>
-                    <a href="team.html" class="nav-item nav-link">Team</a>
-                    <a href="gallery.html" class="nav-item nav-link">Gallery</a>
+                    <a href="about.html" class="nav-item nav-link">حول</a>
+                    <a href="class.html" class="nav-item nav-link active">الكورسات</a>
+                    <a href="gallery.html" class="nav-item nav-link">المعرض</a>
+                    <a href="team.html" class="nav-item nav-link">الفريق</a>
+                    <a href="contact.html" class="nav-item nav-link">تواصل معنا</a>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Blog</a>
                         <div class="dropdown-menu rounded-0 m-0">
@@ -54,9 +52,9 @@
                             <a href="single.html" class="dropdown-item">Blog-Detail</a>
                         </div>
                     </div>
-                    <a href="contact.html" class="nav-item nav-link">Contact</a>
                 </div>
-                <a href="" class="btn btn-primary px-4">Join program</a>
+                <a href="Exam1.html" class="btn btn-primary px-4">امتحن الان</a>
+
             </div>
         </nav>
     </div>
@@ -83,87 +81,32 @@
             <div class="col-lg-8">
                 <div class="d-flex flex-column text-left mb-3">
                     <p class="section-title pr-5"><span class="pr-2">Blog Detail Page</span></p>
-                    <h1 class="mb-3">Diam dolor est ipsum clita lorem</h1>
+                    <h1 class="mb-3"><?php echo $post->title; ?></h1>
                     <div class="d-flex">
-                        <p class="mr-3"><i class="fa fa-user text-primary"></i> Admin</p>
-                        <p class="mr-3"><i class="fa fa-folder text-primary"></i> Web Design</p>
-                        <p class="mr-3"><i class="fa fa-comments text-primary"></i> 15</p>
+                        <p class="mr-3"><i class="fa fa-user text-primary"></i> <?php echo $post->first_name . ' ' . $post->last_name; ?></p>
+                        <p class="mr-3"><i class="fa fa-folder text-primary"></i> <?php echo $post->category; ?></p>
+                        <p class="mr-3"><i class="fa fa-comments text-primary"></i> <?php echo $post->total_comments; ?></p>
                     </div>
                 </div>
                 <div class="mb-5">
-                    <img class="img-fluid rounded w-100 mb-4" src="img/detail.jpg" alt="Image">
-                    <p>Sadipscing labore amet rebum est et justo gubergren. Et eirmod ipsum sit diam ut magna lorem. Nonumy vero labore lorem sanctus rebum et lorem magna kasd, stet amet magna accusam consetetur eirmod. Kasd accusam sit ipsum sadipscing
-                        et at at sanctus et. Ipsum sit gubergren dolores et, consetetur justo invidunt at et aliquyam ut et vero clita. Diam sea sea no sed dolores diam nonumy, gubergren sit stet no diam kasd vero.</p>
-                    <p>Voluptua est takimata stet invidunt sed rebum nonumy stet, clita aliquyam dolores vero stet consetetur elitr takimata rebum sanctus. Sit sed accusam stet sit nonumy kasd diam dolores, sanctus lorem kasd duo dolor dolor vero sit et.
-                        Labore ipsum duo sanctus amet eos et. Consetetur no sed et aliquyam ipsum justo et, clita lorem sit vero amet amet est dolor elitr, stet et no diam sit. Dolor erat justo dolore sit invidunt.</p>
-                    <h2 class="mb-4">Est dolor lorem et ea</h2>
-                    <img class="img-fluid rounded w-50 float-left mr-4 mb-3" src="img/blog-1.jpg" alt="Image">
-                    <p>Diam dolor est labore duo invidunt ipsum clita et, sed et lorem voluptua tempor invidunt at est sanctus sanctus. Clita dolores sit kasd diam takimata justo diam lorem sed. Magna amet sed rebum eos. Clita no magna no dolor erat diam
-                        tempor rebum consetetur, sanctus labore sed nonumy diam lorem amet eirmod. No at tempor sea diam kasd, takimata ea nonumy elitr sadipscing gubergren erat. Gubergren at lorem invidunt sadipscing rebum sit amet ut ut, voluptua diam
-                        dolores at sadipscing stet. Clita dolor amet dolor ipsum vero ea ea eos. Invidunt sed diam dolores takimata dolor dolore dolore sit. Sit ipsum erat amet lorem et, magna sea at sed et eos. Accusam eirmod kasd lorem clita sanctus
-                        ut consetetur et. Et duo tempor sea kasd clita ipsum et. Takimata kasd diam justo est eos erat aliquyam et ut. Ea sed sadipscing no justo et eos labore, gubergren ipsum magna dolor lorem dolore, elitr aliquyam takimata sea kasd
-                        dolores diam, amet et est accusam labore eirmod vero et voluptua. Amet labore clita duo et no. Rebum voluptua magna eos magna, justo gubergren labore sit voluptua eos.</p>
-                    <h3 class="mb-4">Est dolor lorem et ea</h3>
-                    <img class="img-fluid rounded w-50 float-right ml-4 mb-3" src="img/blog-2.jpg" alt="Image">
-                    <p>Diam dolor est labore duo invidunt ipsum clita et, sed et lorem voluptua tempor invidunt at est sanctus sanctus. Clita dolores sit kasd diam takimata justo diam lorem sed. Magna amet sed rebum eos. Clita no magna no dolor erat diam
-                        tempor rebum consetetur, sanctus labore sed nonumy diam lorem amet eirmod. No at tempor sea diam kasd, takimata ea nonumy elitr sadipscing gubergren erat. Gubergren at lorem invidunt sadipscing rebum sit amet ut ut, voluptua diam
-                        dolores at sadipscing stet. Clita dolor amet dolor ipsum vero ea ea eos. Invidunt sed diam dolores takimata dolor dolore dolore sit. Sit ipsum erat amet lorem et, magna sea at sed et eos. Accusam eirmod kasd lorem clita sanctus
-                        ut consetetur et. Et duo tempor sea kasd clita ipsum et. Takimata kasd diam justo est eos erat aliquyam et ut. Ea sed sadipscing no justo et eos labore, gubergren ipsum magna dolor lorem dolore, elitr aliquyam takimata sea kasd
-                        dolores diam, amet et est accusam labore eirmod vero et voluptua. Amet labore clita duo et no.</p>
-                </div>
-
-                <!-- Related Post -->
-                <div class="mb-5 mx-n3">
-                    <h2 class="mb-4 ml-3">Related Post</h2>
-                    <div class="owl-carousel post-carousel position-relative">
-                        <div class="d-flex align-items-center bg-light shadow-sm rounded overflow-hidden mx-3">
-                            <img class="img-fluid" src="img/post-1.jpg" style="width: 80px; height: 80px;">
-                            <div class="pl-3">
-                                <h5 class="">Diam amet eos at no eos</h5>
-                                <div class="d-flex">
-                                    <small class="mr-3"><i class="fa fa-user text-primary"></i> Admin</small>
-                                    <small class="mr-3"><i class="fa fa-folder text-primary"></i> Web Design</small>
-                                    <small class="mr-3"><i class="fa fa-comments text-primary"></i> 15</small>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="d-flex align-items-center bg-light shadow-sm rounded overflow-hidden mx-3">
-                            <img class="img-fluid" src="img/post-2.jpg" style="width: 80px; height: 80px;">
-                            <div class="pl-3">
-                                <h5 class="">Diam amet eos at no eos</h5>
-                                <div class="d-flex">
-                                    <small class="mr-3"><i class="fa fa-user text-primary"></i> Admin</small>
-                                    <small class="mr-3"><i class="fa fa-folder text-primary"></i> Web Design</small>
-                                    <small class="mr-3"><i class="fa fa-comments text-primary"></i> 15</small>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="d-flex align-items-center bg-light shadow-sm rounded overflow-hidden mx-3">
-                            <img class="img-fluid" src="img/post-3.jpg" style="width: 80px; height: 80px;">
-                            <div class="pl-3">
-                                <h5 class="">Diam amet eos at no eos</h5>
-                                <div class="d-flex">
-                                    <small class="mr-3"><i class="fa fa-user text-primary"></i> Admin</small>
-                                    <small class="mr-3"><i class="fa fa-folder text-primary"></i> Web Design</small>
-                                    <small class="mr-3"><i class="fa fa-comments text-primary"></i> 15</small>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    <img class="img-fluid rounded w-100 mb-4" src="<?php echo assets('images/' . $post->image); ?>" alt="<?php echo $post->title; ?>">
+                    <?php echo htmlspecialchars_decode($post->details); ?>
                 </div>
 
                 <!-- Comment List -->
                 <div class="mb-5">
-                    <h2 class="mb-4">3 Comments</h2>
+                    <h2 class="mb-4"><?php echo $post->total_comments; ?> Comments</h2>
+                    <?php foreach ($post->comments AS $comment) { ?>
+
                     <div class="media mb-4">
-                        <img src="img/user.jpg" alt="Image" class="img-fluid rounded-circle mr-3 mt-1" style="width: 45px;">
+                        <img src="<?php echo assets('images/' . $comment->userImage); ?>" alt="Image" class="img-fluid rounded-circle mr-3 mt-1" style="width: 45px;">
                         <div class="media-body">
-                            <h6>Robotak <small><i>01 Jan 2045 at 12:00pm</i></small></h6>
-                            <p>Diam amet duo labore stet elitr ea clita ipsum, tempor labore accusam ipsum et no at. Kasd diam tempor rebum magna dolores sed sed eirmod ipsum. Gubergren clita aliquyam consetetur sadipscing, at tempor amet ipsum diam tempor
-                                consetetur at sit.</p>
-                            <button class="btn btn-sm btn-light">Reply</button>
+                            <h6><?php echo $comment->first_name . ' ' . $comment->last_name; ?> <small><i><?php echo date('d/m/Y h:i A', $comment->created); ?></i></small></h6>
+                            <p><?php echo $comment->comment; ?></p>
                         </div>
                     </div>
+                    <?php } ?>
+
                     <div class="media mb-4">
                         <img src="img/user.jpg" alt="Image" class="img-fluid rounded-circle mr-3 mt-1" style="width: 45px;">
                         <div class="media-body">
@@ -342,68 +285,55 @@
         <div class="row pt-5">
             <div class="col-lg-3 col-md-6 mb-5">
                 <a href="" class="navbar-brand font-weight-bold text-primary m-0 mb-4 p-0" style="font-size: 40px; line-height: 40px;">
-                    <img src="img\001-letter-r.png" style="height: 80px; ">
-                    <span class="text-white">Robotak</span>
+                    <span class="text-white">روبوتاك</span>
                 </a>
-                <p>Labore dolor amet ipsum ea, erat sit ipsum duo eos. Volup amet ea dolor et magna dolor, elitr rebum duo est sed diam elitr. Stet elitr stet diam duo eos rebum ipsum diam ipsum elitr.</p>
+                <p>فرصة للطلائع لإظهار قدراتهم وابتكاراتهم عن طريق برامج تدريبية (عملية ونظرية) في مجالات تصميم الروبوتات وحل المشاكل والبرمجة السهلة</p>
                 <div class="d-flex justify-content-start mt-4">
-                    <a class="btn btn-outline-primary rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-twitter"></i></a>
-                    <a class="btn btn-outline-primary rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-outline-primary rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-linkedin-in"></i></a>
-                    <a class="btn btn-outline-primary rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-instagram"></i></a>
+                    <a class="btn btn-outline-primary rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="https://www.facebook.com/Robotakemys"><i class="fab fa-facebook-f"></i></a>
+                    <a class="btn btn-outline-primary rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="https://www.instagram.com/Robotakemys"><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
-                <h3 class="text-primary mb-4">Get In Touch</h3>
-                <div class="d-flex">
-                    <h4 class="fa fa-map-marker-alt text-primary"></h4>
-                    <div class="pl-3">
-                        <h5 class="text-white">Address</h5>
-                        <p>123 Street</p>
-                    </div>
-                </div>
+                <h3 class="text-primary mb-4">ابقى على تواصل</h3>
                 <div class="d-flex">
                     <h4 class="fa fa-envelope text-primary"></h4>
                     <div class="pl-3">
-                        <h5 class="text-white">Email</h5>
-                        <p>info@example.com</p>
+                        <h5 class="text-white">البريد</h5>
+                        <p>webmaster@robotak.org</p>
                     </div>
                 </div>
                 <div class="d-flex">
                     <h4 class="fa fa-phone-alt text-primary"></h4>
                     <div class="pl-3">
-                        <h5 class="text-white">Phone</h5>
-                        <p>+02 115-392-1187</p>
+                        <h5 class="text-white">تليفون</h5>
+                        <p>19133</p>
                     </div>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
-                <h3 class="text-primary mb-4">Quick Links</h3>
+                <h3 class="text-primary mb-4">روابط سريعة</h3>
                 <div class="d-flex flex-column justify-content-start">
-                    <a class="text-white mb-2" href="index.html"><i class="fa fa-angle-right mr-2"></i>Home</a>
-                    <a class="text-white mb-2" href="about.html"><i class="fa fa-angle-right mr-2"></i>About Us</a>
-                    <a class="text-white mb-2" href="class.html"><i class="fa fa-angle-right mr-2"></i>Our Classes</a>
-                    <a class="text-white mb-2" href="team.html"><i class="fa fa-angle-right mr-2"></i>Our Doctors</a>
-                    <a class="text-white mb-2" href="blog.html"><i class="fa fa-angle-right mr-2"></i>Our Blog</a>
-                    <a class="text-white" href="contact.html"><i class="fa fa-angle-right mr-2"></i>Contact Us</a>
+                    <a class="text-white mb-2" href="index.html"><i class="fa fa-angle-right mr-2"></i>الرئيسيه</a>
+                    <a class="text-white mb-2" href="about.html"><i class="fa fa-angle-right mr-2"></i>حول</a>
+                    <a class="text-white mb-2" href="team.html"><i class="fa fa-angle-right mr-2"></i>فريق العمل</a>
+                    <a class="text-white" href="contact.html"><i class="fa fa-angle-right mr-2"></i>تواصل معنا</a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
-                <h3 class="text-primary mb-4">Newsletter</h3>
+                <h3 class="text-primary mb-4">الاشعارات</h3>
                 <form action="">
                     <div class="form-group">
-                        <input type="text" class="form-control border-0 py-4" placeholder="Your Name" required="required" />
+                        <input type="text" class="form-control border-0 py-4" placeholder="الاسم" required="required" />
                     </div>
                     <div class="form-group">
-                        <input type="email" class="form-control border-0 py-4" placeholder="Your Email" required="required" />
+                        <input type="email" class="form-control border-0 py-4" placeholder="البريد الالكتروني" required="required" />
                     </div>
                     <div>
-                        <button class="btn btn-primary btn-block border-0 py-3" type="submit">Submit Now</button>
+                        <button class="btn btn-primary btn-block border-0 py-3" type="submit">اشترك</button>
                     </div>
                 </form>
             </div>
         </div>
-
     </div>
     <!-- Footer End -->
 
@@ -427,5 +357,7 @@
 
     <script src="js/main.js"></script>
 </body>
+
+</html>
 
 </html>
